--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.10.1
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.10.2
     restart: unless-stopped
     tty: true
     deploy:
@@ -138,7 +138,7 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.9.2
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.9.3
     restart: unless-stopped
     tty: true
     deploy:
@@ -240,13 +240,13 @@ services:
 
 
   legacy-bridge:
-    image: registry.libriciel.fr/public/signature/legacy-bridge:1.5.18
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.5.19
     restart: unless-stopped
     tty: true
     deploy:
       resources:
         limits:
-          memory: 1536M
+          memory: 2G
     depends_on:
       - core
     external_links:
