--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -113,9 +113,10 @@ services:
       - "9009:8080"
 
 
-  # transform-core-aio:
-  #   ports:
-  #    - "8090:8090"
+  transform-core-aio:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
+    # ports:
+    #   - "8090:8090"
 
 
   libriciel-engine-extractors:
