--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -102,14 +102,15 @@ services:
 
 
   transform-core-aio:
-    ports:
-      - "8090:8090"
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
+    # ports:
+    #  - "8090:8090"
 
 
   libriciel-engine-extractors:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-alfresco-transform-extractors:develop
-    # ports:
-    #  - "8090:8090"
+    ports:
+     - "8090:8090"
 
 
   activemq:
