--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -124,15 +124,9 @@ services:
     ports:
       - "8090:8090"
 
-  #solr6:
-  #  #mem_limit: 1536M
-  #  #memswap_limit: 1536M
-  #  ports:
-  #    - 8983:8983
-
 
   postgres:
-    # image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-postgresql:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-postgresql:develop
     memswap_limit: 1G
     ports:
       - "5432:5432"
