Share the client API to Core's Springdoc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,7 @@ services:
       - KEYCLOAK_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
       - KEYCLOAK_RESTADMIN_PASSWORD
+      - KEYCLOAK_WEB_CLIENT_ID
       - INITIAL_IPARAPHEUR_ADMIN_USER
       - SECRET_PROTOCOL
       - SECRET_HOST
