--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,79 @@ package_tar_gz:
 # </editor-fold desc="Package">
 
 
+# <editor-fold desc="Test">
+
+
+.e2e-tests:
+  image: markhobson/maven-chrome:jdk-11
+  variables:
+    LANG: fr_FR.UTF-8
+  stage: e2e-tests
+  needs: [ strict-e2e-tests-deploy ]
+  script:
+    - set -eo pipefail
+    - apt-get update && apt-get install --assume-yes --no-install-recommends --show-upgraded libpoppler118=22.02.* libxml2-utils=2.9.* locales=2.35-* locales-all=2.35-* python3-pip=22.0.* poppler-utils=22.02.* xmlsec1=1.2.* zip=3.0-12build2 && pip3 install jsonpath-ng==1.5.3 Pillow==9.2.0 PyPDF2==2.10.0 && locale-gen fr_FR.UTF-8
+    - echo "Test ${CI_COMMIT_REF_NAME} deployed on ${E2E_TESTS_TARGET_SERVER_URL} with Karate - These tests mustn't fail"
+    - ./gradlew test -Dkarate.options="${KARATE_ADDITIONAL_TAGS}" -Dkarate.adminUserPwd="${E2E_TESTS_INITIAL_ADMIN_PWD}" -Dkarate.headless=true -Dkarate.baseUrl="https://${E2E_TESTS_TARGET_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
+    - python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt
+  after_script:
+    - if [ ! -f build/karate-tests-fixme-ip-tag.txt ] ; then python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt ; fi
+  artifacts:
+    when: always
+    name: ${REPORT_NAME}
+    paths:
+      - build/ip5-folders
+      - build/karate-reports
+      - build/karate-tests-fixme-ip-tag.txt
+
+
+setup-e2e-tests:
+  extends: [ .e2e-tests ]
+  stage: .post
+  variables:
+    REPORT_NAME: "Karate - tests strict - ${KARATE_TEST_SET}"
+    KARATE_ADDITIONAL_TAGS: "--tags @before --tags ~@ignore "
+  needs:
+    - job: strict-e2e-tests-deploy
+      optional: true
+  allow_failure: false
+
+
+strict-e2e-tests:
+  extends: [ .e2e-tests ]
+  stage: .post
+  variables:
+    REPORT_NAME: "Karate - tests strict - ${KARATE_TEST_SET}"
+    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @${KARATE_TEST_SET} --tags ~@fixme-ip5 --tags ~@ignore "
+  needs:
+    - job: setup-e2e-tests
+      optional: true
+  allow_failure: false
+  parallel:
+    matrix:
+      - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
+
+
+tolerant-e2e-tests:
+  extends: [ .e2e-tests ]
+  stage: .post
+  variables:
+    REPORT_NAME: "Karate - tests tolerant - ${KARATE_TEST_SET}"
+    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @${KARATE_TEST_SET} --tags @fixme-ip5 --tags ~@ignore "
+  needs: [ strict-e2e-tests ]
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
+      when: never
+    - when: manual
+  allow_failure: true
+  parallel:
+    matrix:
+      - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
+
+
+# </editor-fold desc="Test">
+
+
 # <editor-fold desc="Deploy">
 
 
@@ -197,75 +270,3 @@ partner-deploy:
 
 
 # </editor-fold desc="Deploy">
-
-
-# <editor-fold desc=".post">
-
-
-.e2e-tests:
-  image: markhobson/maven-chrome:jdk-11
-  variables:
-    LANG: fr_FR.UTF-8
-  stage: e2e-tests
-  script:
-    - set -eo pipefail
-    - apt-get update && apt-get install --assume-yes --no-install-recommends --show-upgraded libpoppler118=22.02.* libxml2-utils=2.9.* locales=2.35-* locales-all=2.35-* python3-pip=22.0.* poppler-utils=22.02.* xmlsec1=1.2.* zip=3.0-12build2 && pip3 install jsonpath-ng==1.5.3 Pillow==9.2.0 PyPDF2==2.10.0 && locale-gen fr_FR.UTF-8
-    - echo "Test ${CI_COMMIT_REF_NAME} deployed on ${E2E_TESTS_TARGET_SERVER_URL} with Karate - These tests mustn't fail"
-    - ./gradlew test -Dkarate.options="${KARATE_ADDITIONAL_TAGS}" -Dkarate.adminUserPwd="${E2E_TESTS_INITIAL_ADMIN_PWD}" -Dkarate.headless=true -Dkarate.baseUrl="https://${E2E_TESTS_TARGET_SERVER_URL}" -Dkarate.chromeBin=/opt/google/chrome/google-chrome
-    - python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt
-  after_script:
-    - if [ ! -f build/karate-tests-fixme-ip-tag.txt ] ; then python3 src/scripts/karate-tests-fixme-ip-tag.py | tee build/karate-tests-fixme-ip-tag.txt ; fi
-  artifacts:
-    when: always
-    name: ${REPORT_NAME}
-    paths:
-      - build/ip5-folders
-      - build/karate-reports
-      - build/karate-tests-fixme-ip-tag.txt
-
-
-setup-e2e-tests:
-  extends: [ .e2e-tests ]
-  stage: .post
-  variables:
-    REPORT_NAME: "Karate - tests strict - ${KARATE_TEST_SET}"
-    KARATE_ADDITIONAL_TAGS: "--tags @before --tags ~@ignore "
-  needs:
-    - job: strict-e2e-tests-deploy
-      optional: true
-  allow_failure: false
-
-
-strict-e2e-tests:
-  extends: [ .e2e-tests ]
-  stage: .post
-  variables:
-    REPORT_NAME: "Karate - tests strict - ${KARATE_TEST_SET}"
-    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @${KARATE_TEST_SET} --tags ~@fixme-ip5 --tags ~@ignore "
-  needs:
-    - job: setup-e2e-tests
-      optional: true
-  allow_failure: false
-  parallel:
-    matrix:
-      - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
-
-
-tolerant-e2e-tests:
-  extends: [ .e2e-tests ]
-  stage: .post
-  variables:
-    REPORT_NAME: "Karate - tests tolerant - ${KARATE_TEST_SET}"
-    KARATE_ADDITIONAL_TAGS: "--tags @ip5 --tags @${KARATE_TEST_SET} --tags @fixme-ip5 --tags ~@ignore "
-  needs: [ strict-e2e-tests ]
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_TAG != null
-      when: never
-    - when: manual
-  allow_failure: true
-  parallel:
-    matrix:
-      - KARATE_TEST_SET: [ "demo-simple-bde", "formats-de-signature", "legacy-bridge", "metadonnees" ]
-
-
-# </editor-fold desc=".post">
