--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,16 +59,9 @@ package_tar_gz:
   script:
     - sed -i "s/%CI_COMMIT_REF_NAME%/$CI_COMMIT_REF_NAME/g" docker-compose.yml
     - mkdir ${PACKAGE_NAME}
-    - >
-      mv -t ${PACKAGE_NAME} \
-         docker-compose.yml \
-         .env.dist
+    - mv --target-directory ${PACKAGE_NAME} docker-compose.yml .env.dist
     - mkdir ${PACKAGE_NAME}/docker-resources
-    - >
-      mv -t ${PACKAGE_NAME}/docker-resources \
-         backup.sh \
-         backup_rotation.sh \
-         cron.sh
+    - mv --target-directory ${PACKAGE_NAME}/docker-resources src/main/docker-resources/*
     - tar --create --gzip --file ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
   artifacts:
     # The package is only needed for a while, to be used on the next deploy jobs.
