Force the scripts to be executables

--- a/.env.dist
+++ b/.env.dist
@@ -107,6 +107,8 @@ GDPR_MAINTENANCE_ENTITY_NAME="${GDPR_HOSTING_ENTITY_NAME}"
 GDPR_MAINTENANCE_ENTITY_ADDRESS="${GDPR_HOSTING_ENTITY_ADDRESS}"
 GDPR_MAINTENANCE_ENTITY_SIRET="${GDPR_HOSTING_ENTITY_SIRET}"
 
+WAITING_DAYS=auto-update-disabled
+
 # Only needed if IPNG is to be activated
 # IPNG_HOST=<domain of IPNG nodes eg ipng.libriciel.fr>
 # IPNG_MSPID=<IPNG MSP id>
