--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,7 @@ package-tar-gz:
     - mv --target-directory ${PACKAGE_NAME} docker-compose.yml .env.dist
     - mkdir ${PACKAGE_NAME}/docker-resources
     - mv --target-directory ${PACKAGE_NAME}/docker-resources src/main/resources/docker-resources/*
+    - chmod +x ${PACKAGE_NAME}/docker-resources/*.sh
     - tar --create --gzip --file ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
   artifacts:
     # The package is only needed for a while, to be used on the next deploy jobs.
