--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -42,6 +42,7 @@ services:
 
 
   redis:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-redis/develop:latest
     ports:
       - "6379:6379"
 
@@ -113,6 +114,7 @@ services:
 
 
   activemq:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-activemq/develop:latest
     ports:
       - "8161:8161"   # Web Console
       - "5672:5672"   # AMQP
