--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -103,8 +103,8 @@ services:
 
   transform-core-aio:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/alfresco-transform-core-aio:develop
-    # ports:
-    #  - "8090:8090"
+    ports:
+      - "8091:8090"
 
 
   libriciel-engine-extractors:
