--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -90,7 +90,7 @@ services:
 
 
   pdf-stamp:
-    image: gitlab.libriciel.fr:4567/outils/pdf-stamp:develop
+    image: gitlab.libriciel.fr:4567/outils/pdf-stamp/develop:latest
     ports:
       - "8889:8080"
 
