--- a/overrides/docker-compose.override.dev.yml
+++ b/overrides/docker-compose.override.dev.yml
@@ -93,8 +93,8 @@ services:
   redis:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-redis/develop:latest
 
-  activemq:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-activemq/develop:latest
+  # activemq:
+  #   image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-activemq/develop:latest
 
   smtp:
     image: tophfr/mailcatcher:0.7.1
