--- a/overrides/docker-compose.override.dev.yml
+++ b/overrides/docker-compose.override.dev.yml
@@ -90,9 +90,12 @@ services:
   prometheus:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-prometheus/develop:latest
 
+
+  # FIXME don't know why, those two are not found when calling docker pull from the CI... to be investigated.
+  #
   # redis:
   #   image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-redis/develop:latest
-
+  #
   # activemq:
   #   image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-activemq/develop:latest
 
