Use a translated domain name

--- a/.env.dist
+++ b/.env.dist
@@ -22,9 +22,9 @@ DATA_ROOT_DIR=/data/iparapheur
 BACKUPS_ROOT_DIR=/data/iparapheur_backups
 
 APPLICATION_PROTOCOL=https
-APPLICATION_HOST=iparapheur.dom.local
 CERTIFICATE_FULLCHAIN_PATH=/data/iparapheur/nginx/ssl/fullchain.pem
 CERTIFICATE_PRIVKEY_PATH=/data/iparapheur/nginx/ssl/privkey.pem
+APPLICATION_HOST=iparapheur.domaine.local
 
 # The SMTP values will be set and updated on every Core restart.
 # Yet, they only will be applied on Keycloak initialisation, and never re-applied after.
@@ -34,7 +34,7 @@ SMTP_PORT=25
 SMTP_USER=
 SMTP_PASSWORD=
 SMTP_ENABLE_AUTH=false
-SMTP_MAIL_FROM=ne-pas-repondre@dom.local
+SMTP_MAIL_FROM=ne-pas-repondre@domaine.local
 SMTP_ENABLE_SSL=false
 SMTP_ENABLE_START_TLS=false
 
