--- a/.env.dist
+++ b/.env.dist
@@ -22,9 +22,9 @@ DATA_ROOT_DIR=/data/iparapheur
 BACKUPS_ROOT_DIR=/data/iparapheur_backups
 
 APPLICATION_PROTOCOL=https
-CERTIFICATE_FULLCHAIN_PATH=/data/iparapheur/nginx/ssl/fullchain.pem
-CERTIFICATE_PRIVKEY_PATH=/data/iparapheur/nginx/ssl/privkey.pem
 APPLICATION_HOST=iparapheur.domaine.local
+CERTIFICATE_FULLCHAIN_PATH=/data/iparapheur/certificate/ssl/fullchain.pem
+CERTIFICATE_PRIVKEY_PATH=/data/iparapheur/certificate/ssl/privkey.pem
 
 # The SMTP values will be set and updated on every Core restart.
 # Yet, they only will be applied on Keycloak initialisation, and never re-applied after.
@@ -84,7 +84,7 @@ SECUREMAIL_DB_PASSWORD=<random-password>
 SECRET_PROTOCOL=http
 SECRET_HOST=vault
 SECRET_PORT=8200
-VAULT_UNSEAL_KEY=<token>
+VAULT_UNSEAL_KEY=<key>
 VAULT_TOKEN=<token>
 
 GDPR_DECLARING_ENTITY_NAME=
@@ -108,9 +108,3 @@ GDPR_MAINTENANCE_ENTITY_ADDRESS="${GDPR_HOSTING_ENTITY_ADDRESS}"
 GDPR_MAINTENANCE_ENTITY_SIRET="${GDPR_HOSTING_ENTITY_SIRET}"
 
 WAITING_DAYS=auto-update-disabled
-
-# Only needed if IPNG is to be activated
-# IPNG_HOST=<domain of IPNG nodes eg ipng.libriciel.fr>
-# IPNG_MSPID=<IPNG MSP id>
-# MONGO_DB_USR=root
-# MONGO_DB_PWD=rootpassToChange
